syntax = "proto3";
option java_multiple_files = true;
option java_package = "product";

import "shared/attribute.proto";

message Category {
  string id = 1;
  string name = 2;
}

message ProductRequest {
  string name = 1;
  string description = 2;
  int32 sales = 3;
  int32 inventory = 4;
  double price = 5;
  string sellerId = 6;
  repeated string img = 7;
  repeated shared.Attribute attributes = 8; 
}

message ProductUpdateRequest {
  string productId=1;
  ProductRequest productRequest = 2;
}

message ProductId {
  string id = 1;
}

message SellerId{
  string id = 1;
}

service ProductService {
  rpc getSellerId(ProductId) returns (SellerId);
}
